bin/stoat/tests/snapshots/diff_cli__diff_cli_deleted.snap
---
source: bin/tests/diff_cli.rs
expression: "String::from_utf8(out).unwrap()"
---
--- b.rs
@@
-fn b() { 2 }
