bin/stoat/tests/snapshots/diff_cli__diff_cli_git_delete.snap
---
source: bin/tests/diff_cli.rs
expression: "String::from_utf8(out).unwrap()"
---
--- old.rs
@@
-fn old() {}
