bin/stoat/tests/snapshots/diff_cli__diff_cli_modification.snap
---
source: bin/tests/diff_cli.rs
expression: "String::from_utf8(out).unwrap()"
---
--- a.rs
@@
-fn a() { 1 }
+fn a() { 2 }
